--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,12 +11,12 @@ jobs:
   build:
     strategy:
       matrix:
-        os: [ubuntu-22.04, windows-2019]
+        os: [ubuntu-22.04, windows-2022]
         # os: [ubuntu-latest, macos-latest, windows-latest]
     runs-on: ${{ matrix.os }}
     defaults:
       run:
-        shell: ${{ matrix.os == 'windows-2019' && 'msys2 {0}' || 'bash' }}
+        shell: ${{ matrix.os == 'windows-2022' && 'msys2 {0}' || 'bash' }}
 
     steps:
       - name: Checkout repository
@@ -190,4 +190,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: iDescriptor-Windows
-          path: build/iDescriptor.exe
+          path: build/Release/iDescriptor.exe
