--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,6 +33,7 @@ jobs:
           release: false
           update: false
           install: >-
+            coreutils
             base-devel
             git
             mingw-w64-x86_64-gcc
@@ -53,6 +54,29 @@ jobs:
             mingw-w64-x86_64-curl
             mingw-w64-x86_64-openssl
             mingw-w64-x86_64-libzip
+
+      - name: Download and Install Bonjour SDK (Windows)
+        if: runner.os == 'Windows'
+        run: |
+          wget https://gsf-fl.softonic.com/b18/d44/cbdcd43ad683cf6760d45ce891c3035044/bonjoursdksetup.exe?Expires=1757906571&Signature=af8dfce8a002130f34c0e93e17b8dd96d547ff69&url=https://bonjour.en.softonic.com/&Filename=bonjoursdksetup.exe -O bonjour-sdk.exe
+          ./bonjour-sdk.exe /S
+
+          # Compare checksum to verify download
+          # This hash was obtained from Apple's official Bonjour SDK download page
+          EXPECTED_HASH="4ff2aae8205aec31b06743782cfcadce"
+          ACTUAL_HASH=$(md5sum bonjour-sdk.exe | awk '{print $1}')
+
+          echo "Expected MD5: $EXPECTED_HASH"
+          echo "Actual MD5:   $ACTUAL_HASH"
+
+          if [ "$ACTUAL_HASH" != "$EXPECTED_HASH" ]; then
+            echo "::error::Checksum mismatch!"
+            exit 1
+          fi
+
+          echo "Checksum verified successfully. Installing Bonjour SDK..."
+          ./bonjour-sdk.exe /S
+          echo "BONJOUR_SDK_HOME=C:/Program Files/Bonjour SDK" >> $GITHUB_ENV
 
       - name: Install Qt (Linux)
         if: runner.os == 'Linux'
