--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -53,7 +53,6 @@ jobs:
             libssh-dev
 
       - name: Install Qt
-        id: install-qt
         uses: jurplel/install-qt-action@v3
         with:
           version: "6.7.2"
@@ -126,8 +125,22 @@ jobs:
       - name: Build AppImage
         working-directory: ./build
         run: |
-          export QTDIR="${{ steps.install-qt.outputs.qt-path }}"
-          echo "QTDIR is set to: $QTDIR"
+          # Qt version installed by the Install Qt step
+          QT_VERSION="6.7.2"
+          # find the arch folder under the runner workspace Qt install
+          ARCH="$(ls -d "$RUNNER_WORKSPACE/Qt/$QT_VERSION/"* 2>/dev/null | head -n1 | xargs -n1 basename || true)"
+          if [ -z "$ARCH" ]; then
+            echo "Could not find Qt installation under $RUNNER_WORKSPACE/Qt/$QT_VERSION"
+            ls -la "$RUNNER_WORKSPACE/Qt" || true
+            exit 1
+          fi
+
+          export QTDIR="$RUNNER_WORKSPACE/Qt/$QT_VERSION/$ARCH"
+          export QT_ROOT_DIR="$QTDIR"
+          export PATH="$QTDIR/bin:$PATH"
+
+          echo "Using QTDIR=$QTDIR"
+
           ../appimagetool-*.AppImage deploy AppDir/usr/share/applications/*.desktop
           VERSION=1.0.0 ../appimagetool-*.AppImage AppDir
 
