refactor asset serving & fix typos
- Added necessary libraries for Linux build in build-linux.yml
- Updated submodule reference for zupdater
- Added new video resource for wireless gallery import
- use UDID instead of UUID across multiple files
- Improved user interface messages and layout in various widgets
- Refactor http server

--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -67,6 +67,10 @@ jobs:
             libzip-dev \
             libssh-dev \
             libfuse3-dev \
+            libavformat-dev \
+            libavcodec-dev \
+            libavutil-dev \
+            libswscale-dev
 
       - name: Install Qt
         uses: jurplel/install-qt-action@v3
